--- a/Portfolio/Web.config
+++ b/Portfolio/Web.config
@@ -1,43 +1,39 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
-  For more information on how to configure your ASP.NET application, please visit
-  https://go.microsoft.com/fwlink/?LinkId=169433
-  -->
 <configuration>
-  <connectionStrings>
-    <add name="PortfolioConnectionString" connectionString="Data Source=RifatAlMuin;Initial Catalog=Portfolio;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
-  <appSettings>
-    <add key="vs:EnableBrowserLink" value="false" />
-  </appSettings>
-  <system.web>
-    <compilation debug="true" targetFramework="4.7.2" />
-    <httpRuntime targetFramework="4.7.2" />
-    <pages>
-      <controls>
-        <add assembly="*" namespace="System.Web.UI" tagPrefix="asp" />
-      </controls>
-    </pages>
-  </system.web>
-  <system.webServer>
-    <defaultDocument>
-      <files>
-        <clear />
-        <add value="Home.aspx" />
-        <add value="Default.aspx" />
-        <add value="default.aspx" />
-        <add value="index.html" />
-        <add value="default.html" />
-      </files>
-    </defaultDocument>
-    <staticContent>
-      <remove fileExtension=".woff" />
-      <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
-      <remove fileExtension=".woff2" />
-      <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
-    </staticContent>
-    <httpErrors errorMode="Detailed" />
-  </system.webServer>
+	<connectionStrings>
+		<add name="PortfolioConnectionString" connectionString="Data Source=RifatAlMuin;Initial Catalog=Portfolio;Integrated Security=True" providerName="System.Data.SqlClient" />
+	</connectionStrings>
+
+	<appSettings>
+		<add key="vs:EnableBrowserLink" value="false" />
+		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+	</appSettings>
+
+	<system.web>
+		<compilation debug="true" targetFramework="4.7.2" />
+		<httpRuntime targetFramework="4.7.2" />
+		<customErrors mode="Off" />
+		<sessionState timeout="30" />
+
+		<!-- Disable unobtrusive validation -->
+		<pages>
+			<namespaces>
+				<add namespace="System.Web.UI" />
+				<add namespace="System.Web.UI.WebControls" />
+			</namespaces>
+		</pages>
+	</system.web>
+
+	<system.webServer>
+		<defaultDocument>
+			<files>
+				<clear />
+				<add value="Home.aspx" />
+				<add value="Default.aspx" />
+			</files>
+		</defaultDocument>
+		<httpErrors errorMode="Detailed" />
+	</system.webServer>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701;612;618" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=4.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
